Minor viewport tweaks to sidebar and overflow scrolling on sidebar and content sections. Need to fix section height to not cut into footer

--- a/johnathan-SQLWebapp/styles/custom.css
+++ b/johnathan-SQLWebapp/styles/custom.css
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
 	min-height: 100%;
 	width: 100%;
+	overflow-y: hidden;
 }
 
 nav.navbar {
@@ -28,17 +29,26 @@ nav.navbar {
 }
 
 #sidebar {
-	flex: 1 0 auto;
-	min-height: 100%;
+	min-height: 80%;
 	border-right: solid 1px #eee;
 	position: fixed;
+	overflow-y: scroll;
+	height: 88%;
+	margin-bottom: 60px;
 }
 
 .content {
 	flex: 1 0 auto;
+	display: flex;
 	padding-top: 10px;
-	position: relative;
+	position: fixed;
 	left: 25vw;
+	overflow-y: scroll;
+	height: 88%;
+}
+
+.row {
+	width: 100%;
 }
 
 .fill {
@@ -162,19 +172,16 @@ pre {
 	border-radius: 0px;
 }
 
-.row {
-	height: 100%;
-}
-
 .footer {
 	background-color: white;
 	border-top: 1px solid #eee;
 	flex: 0 0 auto;
-	bottom: 0;
+
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
 	z-index: 100000000;
+	margin-top: 60px;
 }
 
 .foot-container {
@@ -185,6 +192,7 @@ pre {
 	padding: 10px 25px 10px 25px;
 	min-height: 100%;
 }
+/* WIDTHS */
 
 /* DESKTOP */
 @media (min-width: 1200px) {
@@ -206,7 +214,15 @@ pre {
 
 /* LANDSCAPE PHONE AND PORTRAIT TABLET */
 @media (max-width: 767px) {
+	#add-snippet {
+		margin-top: 0;
+		border-radius: 0;
+		width: 100%;
+	}
 
+	div.row {
+		margin: 0;
+	}
 }
 
 /* PORTRAIT PHONE AND SMALLER */
@@ -217,3 +233,6 @@ pre {
 @media only screen and (max-width: 300px) {
 
 }
+
+/* HEIGHTS */
+
